<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/paw_prints"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.userProfile.AddDogItemFragment">

    <TextView
        android:id="@+id/add_dog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_a_new_family_member"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/add_dog_title"
        tools:layout_editor_absoluteX="-25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dog_name_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_dog_s_name"
            android:inputType="text"
            android:maxLength="12"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="20sp">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dog_breed_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_dog_s_breed"
            android:inputType="text"
            android:maxLength="20"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="20sp">

        </com.google.android.material.textfield.TextInputEditText>

        <RadioGroup
            android:id="@+id/dog_age_radioG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/puppy_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/puppy" />

            <RadioButton
                android:id="@+id/adult_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/adult" />

            <RadioButton
                android:id="@+id/old_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/old" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/dog_gender_radioG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/female_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/female" />

        </RadioGroup>

        <Button
            android:id="@+id/add_dog_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/light_brown"
            android:text="@string/add_image"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/added_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/dog"
            android:tag=""/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_dog_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/light_brown"
                android:text="@string/finish"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/add_dog_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/light_brown"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_addDogItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>