<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_editProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paw_prints"
    android:orientation="vertical"
    tools:context=".ui.userProfile.EditProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="cursive"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editUsername_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:singleLine="true"
        android:maxLength="15"
        android:hint="@string/choose_a_new_username"
        android:textAlignment="center"
        android:inputType="text">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPhone_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:singleLine="true"
        android:maxLength="15"
        android:hint="@string/enter_new_phone_number"
        android:textAlignment="center"
        android:inputType="phone">

    </com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/change_user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/light_brown"
        android:text="@string/add_image"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/new_user_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/default_profile_pic"
        android:tag=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/edit_profile_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/light_brown"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/edit_profile_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/light_brown"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>
