<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:background="@drawable/paw_prints"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BarkPark"
            android:layout_marginTop="17dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textSize="60sp"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_your_email2"
                android:textAlignment="center"
                android:singleLine="true"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:inputType="textPassword"
                android:hint="@string/enter_your_password"
                android:textAlignment="center"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:backgroundTint="@color/light_brown"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/register"
                android:textSize="20sp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/light_brown"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

        </LinearLayout>

        <Button
            android:id="@+id/forgot_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/brown"/>


        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/dog"
            android:layout_gravity="center"/>

    </LinearLayout>

    <ProgressBar
    android:id="@+id/login_progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
