<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:background="@drawable/paw_prints"
    tools:context=".ui.registration.SignUpFragment">

    <ImageButton
        android:id="@+id/signUp_goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/brown"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textSize="70sp"
        android:gravity="center"
        android:id="@+id/signup_title"
        android:text="@string/signup" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUsernameSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="15"
            android:hint="@string/choose_a_username"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUsernameSignup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPasswordSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choose_a_password"
                android:maxLength="8"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_your_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPasswordSignup">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmailSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress">

                </com.google.android.material.textfield.TextInputEditText>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Enter your phone number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editEmailSignup">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPhoneSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/brown"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/signup_layout">

    </androidx.appcompat.widget.AppCompatButton>


        <ImageView
            android:id="@+id/dogHead"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/dog_head"
            app:layout_constraintTop_toBottomOf="@id/signup_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </ImageView>

    <ProgressBar
        android:id="@+id/progress_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>